--- a/roles/ibm-http-config-plgwct/templates/config_plugin_wct.rsp.j2
+++ b/roles/ibm-http-config-plgwct/templates/config_plugin_wct.rsp.j2
@@ -4,14 +4,14 @@ enableUserAndPass=true
 enableWinService=false
 ihsAdminCreateUserAndGroup=true
 ihsAdminPassword={{ ihs_password }}
-ihsAdminPort=8085
-ihsAdminUnixUserGroup=ihsadmins
-ihsAdminUnixUserID={{ ihs_username }}
+ihsAdminPort={{ __ihs_admin_port }}
+ihsAdminUnixUserGroup={{ __ihs_admins_group }}
+ihsAdminUnixUserID={{ __ihs_username }}
 mapWebServerToApplications=true
-wasMachineHostname=$HOSTNAME.$DNS_DOMAIN_NAME
+wasMachineHostname={{ __ihs_hostname }}
 webServerConfigFile1={{ __ihs_install_location }}/conf/httpd.conf
-webServerSelected=icd hs
-webServerDefinition=$HOSTNAME
-webServerHostName=$HOSTNAME.$DNS_DOMAIN_NAME
+webServerSelected=ihs
+webServerDefinition={{ __ihs_hostname }}
+webServerHostName={{ __ihs_hostname }}
 webServerInstallArch=64
 webServerPortNumber=80
