--- a/roles/connections-install/templates/LC.rsp.j2
+++ b/roles/connections-install/templates/LC.rsp.j2
@@ -116,7 +116,7 @@
     <data key='user.notification.ssl.enabled' value='false'/>
   </profile>
   <install>
-    <!-- IBM Connections 6.0.0.0_CR3 -->
+    <!-- IBM Connections 6.0.0.0_CRx -->
     <offering profile='IBM Connections' id='com.ibm.connections'
       version='{{ __this_version }}'
       features='main,common,files,homepage,news,pushNotification,search,rte,widgetContainer,activities,blogs,dogear,communities,forums,metrics,mobile,moderation,profiles,wikis,icec{% if ccm_install is defined %},ccm{% endif %}'/>
